--- a/index.html
+++ b/index.html
@@ -2,3 +2,16 @@
 <html lang = "ja">
  <head>
  <meta charset = "utf-8">
+  <meta name ="viewport" content ="width =device-width,initial-scale=1">
+  <title>課題Bootstrap</title>
+  <link rel ="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ </head>
+ <body>
+  <div class ="container">
+   Hello!
+  </div>
+  
+  <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ </body>
+ <html>
