--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "ja">
  <head>
  <meta charset = "utf-8">
-  <meta name ="viewport" content ="width =device-width,initial-scale=1">
+  <meta name ="viewport" content ="width=device-width, initial-scale=1">
   <title>課題Bootstrap</title>
   <link rel ="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  </head>
@@ -14,4 +14,4 @@
   <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
- <html>
+ </html>
