--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
    Hello!
   </div>
   
+  <nav class ="navbar navbar-default">
+   <div class="container">
+    <div class ="navbar-hader">
+     <a class ="navbar-brand">プロジェクト名</a>
+    </div>
+    <ul class="nav navbar-brand">
+     <li class ="active"><a href="#">１つめ</a></li>
+     <li><a href="#2nd">2つめ</a></li>
+     <li><a href="#3rd">3つめ</a></li>
+    </ul>
+   </div>
+  </nav>
+  
+  <div class ="container">
+   <section>
+    <h1>1つめ</h1>
+    <p>1つめの文章を入れます</p>
+    <h1 id ="2nd">2つめ</h1>
+    <p>２つめの文章を入れます</p>
+    <h1 id="3rd">3つめ</h1>
+    <p>３つめの文章を入れます</p>
+   </section>
+  </div>
+    
+  
   <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
