--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class ="navbar-hader">
      <a class ="navbar-brand">プロジェクト名</a>
     </div>
-    <ul class="nav navbar-brand">
+    <ul class="nav navbar-nav">
      <li class ="active"><a href="#">１つめ</a></li>
      <li><a href="#2nd">2つめ</a></li>
      <li><a href="#3rd">3つめ</a></li>
