--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
    </section>
   </div>
     
+  <div class="input-group">
+   <div class ="input-group-btn">
+   </div>
+   <input type ="text" class="form-control" aria-label="...">
+  </div>
   
+  <div class="input-group">
+    <input type ="text" class="form-control" aria-label="...">
+    <div class ="input-group-btn">
+   </div>
+  </div>
+   
   <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
