--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
    </section>
   </div>
    
+  <form>
+   <div class="form-group">
+    <label for="exampleInputPassword2">Password</label>
+    <input type ="password" class ="form-control" id ="exampleInputPassword2" placeholder="Password">
+   </div>
+   <div class ="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+   </div>
+   <div class="checkbox">
+    <label>
+     <input type="checkbox"> Check me out
+    </label>
+   </div>
+   <button type="submit" class="btn btn-default">Submit</button>
+  </form>
   <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
