--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <input type ="text" class="form-control" aria-label="...">
   </div>
     
-    <h1 class ="bg-warning" id ="2nd">2nd</h1>
+    <h1 class ="bg-danger" id ="2nd">2nd</h1>
     <p>２つめの文章を入れます</p>
     
     <div class="input-group">
