--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
    
   <form>
    <div class="form-group">
-    <label for="exampleInputPassword2">Password</label>
+    <label for="exampleInputPassword1">Password</label>
     <input type ="password" class ="form-control" id ="exampleInputPassword2" placeholder="Password">
    </div>
    <div class ="form-group">
@@ -68,11 +68,12 @@
    </div>
    <div class="checkbox">
     <label>
-     <input type="checkbox"> Check me out
+     <input type="checkbox" id="checkboxWarning" value ="option1"> Check me out
     </label>
    </div>
    <button type="submit" class="btn btn-default">Submit</button>
   </form>
+  
   <script src ="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src ="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
