--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
     <input type="file" id="exampleInputFile">
     <p class="help-block">Example block-level help text here.</p>
    </div>
+   <div class ="has-error">
    <div class="checkbox">
     <label>
-     <input type="checkbox" id="checkboxWarning" value ="option1"> Check me out
+     <input type="checkbox" id="checkboxError" value ="option1"> Check me out
     </label>
+   </div>
    </div>
    <button type="submit" class="btn btn-default">Submit</button>
   </form>
